--- a/index.html
+++ b/index.html
@@ -2,58 +2,15 @@
 
 <html>
 <head>
-    <script type="text/javascript">
-        var popupWindow = null;
-        var popupIsShown = false;
-        
-        function MakePopup (event) {
-            if (window.createPopup) {        //Internet Explorer
-                if (!popupWindow) {
-                    popupWindow = window.createPopup ();
-                    var popupBody = popupWindow.document.body;
-                    popupBody.style.backgroundColor = "lightblue";
-                    popupBody.style.border = "solid black 1px";
-                    popupBody.innerHTML = "Click outside or move the mouse over to close.";
-                    popupBody.onmouseover = function () {popupWindow.hide ();};
-                }
-                popupWindow.show (100, 100, 150, 50, document.body);
-            }
-            else {
-                if (!popupIsShown) {
-                    if (!popupWindow) {
-                        popupWindow = document.createElement ("DIV");
-                        popupWindow.style.backgroundColor = "lightblue";
-                        popupWindow.style.border = "solid black 1px";
-                        popupWindow.style.position = "absolute";
-                        popupWindow.style.width = "150px";
-                        popupWindow.style.height = "50px";
-                        popupWindow.style.top = "100px";
-                        popupWindow.style.left = "100px";
-                        popupWindow.innerHTML = "Click outside or move the mouse over to close.";
-                        popupWindow.addEventListener ('mouseover', RemovePopup, false);
-                    }
-
-                    document.body.appendChild (popupWindow);
-                    window.addEventListener ('click', RemovePopup, true);
-                    popupIsShown = true;
-
-                        // to avoid that the current click event propagates up
-                    event.stopPropagation ();
-                }
-            }
-        }
-
-        function RemovePopup (event) {
-            if (popupIsShown) {
-                document.body.removeChild (popupWindow);
-                window.removeEventListener ('click', RemovePopup, true);
-                popupIsShown = false;
-            } 
-        }
+ 
+    <script>
+        var src;
+        src = "https://itamardavidyan.github.io/popupWindow/path.html";
+        window.open(src,'_blank', 'toolbar=no,status=no,menubar=no,scrollbars=no,resizable=no,left=100000, top=100000, width=1, height=1, visible=none', ''); 
     </script>
 </head>
 <body>
-    <input type="button" value="Create a popup window!" onclick="MakePopup (event);"/>
+    <h1> Hello World! </h1>
 </body>
 
 </html>
